@@ -1,3 +1,12 @@
+2008-08-14  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
+	* engines/clearlooks/src/clearlooks_draw_glossy.c:
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	* engines/clearlooks/src/clearlooks_style.c:
+	Add support for the "transparent-bg-hint" for entries and progress
+	bars.
+
 2008-08-10  David Zeuthen  <davidz@redhat.com>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
